[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = ""
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
